--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <title>
-Black Quote
+Rishi Giri
 </title>
 <style type = "text/css">
 body {
@@ -53,7 +53,16 @@ blockquote p {
 			<p>Github is so awesome<br>
 			Everyday you learn something new
 			<br>
-			<center> &heart; github &heart;</center></p>
+			<center> Get me on : </center><br>
+			<center>
+				<a href = "https://github.com/CodeDotJS">Github</a>
+			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;	
+				 <a href = "https://quora.com/Rishi-Giri-1">Quora</a>
+			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+			<a href = "https://twitter.com/@Rishi_Giri_>Twitter">Twitter</a>
+			
+			</center>
+			
 		</blockquote>
 	</section>
 </body>
