--- a/index.html
+++ b/index.html
@@ -3,68 +3,34 @@
 <title>
 Rishi Giri
 </title>
-<style type = "text/css">
-body {
-	margin:0;
-	font-family:Droid Serif;
-	background:#fafafa;
-	line-height:1.5;
-	cursor:default;
-}
-section {
-	box-shadow:0 2px 5px rgba(0,0,0,0.2);
-	background:#fff;
-	width:60%;
-	margin:100px auto;
-	padding:50px;
-}
-blockquote {
-	text-align:center;
-	font-size:20px;
-	border-top:1px solid #ccc;
-	border-bottom:1px solid #ccc;
-	position:relative;
-	quotes: "\201C""\201D""\2018""\2019";
-}
-blockquote:after {
-	color:#ccc;
-	font-family:Source Sans Pro;
-	content: open-quote;
-	font-size:80px;
-	position:absolute;
-	left:50%;
-	bottom:calc(100% - 20px);
-	background:#fff;
-	height:55px;
-	width: 55px;
-	line-height:normal;
-	text-align:center;
-	transform:translateX(-50%);
-}
-blockquote p {
-	padding:20px;
-}
-</style>
+<link rel="shortcut icon" href="http://rishi.pavakpaul.in/github/js-icon.png" type="image/x-icon" />
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
 <body>
+<canvas id = 'canv' width= '1300' height='200'></canvas>
+<script type = "text/javascript" src = "script.js"></script>
 	<section>
 		<blockquote>
-			<p>Github is so awesome<br>
-			Everyday you learn something new
+			<p>Github is so awesome.<br>
+			Everyday you learn something new.
 			<br>
-			<center> Get me on : </center><br>
+			<center> { Get me on } </center>
 			<center>
 				<a href = "https://github.com/CodeDotJS">Github</a>
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;	
 				 <a href = "https://quora.com/Rishi-Giri-1">Quora</a>
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 			<a href = "https://twitter.com/@Rishi_Giri_>Twitter">Twitter</a>
-			
+			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+			<a href = "https://facebook.com/rishi.giri.90">Facebook </a>
+			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+			<a href = "https://plus.google.com/u/0/+RishiGiri-Scripted"> Google Plus </a>
 			</center>
-			
+			<br>
 		</blockquote>
 	</section>
+	<br>
 </body>
 </body>
 </html>
