--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@ Rishi Giri
 			</center>
 			<br>
 		</blockquote>
+		<center> <big><big><abbr title = "get the code"><a href ="https://github.com/CodeDotJS/codedotjs.github.io/tree/master">&hearts;</abbr></big></big> </center>
 	</section>
 	<br>
 </body>
