--- a/facebook-friends/index.html
+++ b/facebook-friends/index.html
@@ -2,19 +2,16 @@
 <html>
 <head>
 	<title>Facebook Friends</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="shortcut icon" href="rishi.png" type="image/x-icon" />
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-
-<!-- a simple grid and an animate button -->
 <div class="grid"></div>
-<span class="animate">Animate</span>
+<center><div class="animate"> &hearts; &nbsp; Animate &nbsp; &hearts;</div></center>
 
-<!-- jQuery -->
-<script src="http://thecodeplayer.com/u/js/jquery-1.9.1.min.js" type="text/javascript"></script>
-<!-- jQuery easing plugin -->
-<script src="http://thecodeplayer.com/u/js/jquery.easing.min.js" type="text/javascript"></script>
+<script src="js/jquery-1.9.1.min.js" type="text/javascript"></script>
+<script src="js/jquery.easing.min.js" type="text/javascript"></script>
+<script src="js/script.js"></script>
 
-<script src="script.js"></script>
 </body>
 </html>
