--- a/facebook-friends/index.html
+++ b/facebook-friends/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Facebook Friends</title>
-	<link rel="shortcut icon" href="rishi.png" type="image/x-icon" />
+	<link rel="shortcut icon" href="https://raw.githubusercontent.com/CodeDotJS/codedotjs.github.io/f7c18c5785c1562630ba1dff2b428fc48a9d2916/facebook-friends/images/rishi.png" type="image/x-icon" />
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
