update link and headers

--- a/index.html
+++ b/index.html
@@ -187,13 +187,26 @@
             opacity: 0.25;
         }
     }
+
+    a {
+      text-decoration: none;
+    }
+
+    a:active {
+      color: #8d3b3e;
+    }
+
+    a:visited {
+      color: #8d3b3e;
+    }
+
     </style>
 </head>
 
 <body>
     <div class="loader">
         <div class="loader__figure"></div>
-        <p class="loader__label">TAKE ME SOMEWHERE NICE...</p>
+        <p class="loader__label"><a href="http://rishigiri.ml">TAKE ME SOMEWHERE NICE...</a></p>
     </div>
 </body>
 
