--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 <body>
     <div class="loader">
         <div class="loader__figure"></div>
-        <p class="loader__label"><a href="http://rishigiri.ml">TAKE ME SOMEWHERE NICE...</a></p>
+        <p class="loader__label"><a href="http://rishi.ml">TAKE ME SOMEWHERE NICE...</a></p>
     </div>
 </body>
 
