--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 <body>
     <div class="loader">
         <div class="loader__figure"></div>
-        <p class="loader__label"><a href="https://rishigiri.tk">TAKE ME SOMEWHERE NICE...</a></p>
+        <p class="loader__label"><a href="https://rishi.ml">TAKE ME SOMEWHERE NICE...</a></p>
     </div>
 </body>
 
