--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="author" content="Rishi Giri">
     <meta name="keywords" content="Rishi, Rishi Giri, Rishi, dotjs, Rishi Giri dotjs, CodeDotJS, Unicorn, JavaScript, Python, Node, Web Development, r8x, ir8x, Web Design, Quora, Github, JavaScript - Python and FOSS Enthusiast, codedotjs." />
     <meta name="description" content="Web Developer, JavaScript, Python & FOSS Enthusiast." />
-    <meta http-equiv="refresh" content="3; url=https://ir8x.me">
+    <meta http-equiv="refresh" content="3; url=https://codedotjs.github.io/space/">
     <link rel="shortcut icon" href="https://raw.githubusercontent.com/web-place/rishigiri.in/gh-pages/rishi.png" type="image/x-icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>Rishi Giri</title>
@@ -207,7 +207,7 @@
 <body>
     <div class="loader">
         <div class="loader__figure"></div>
-        <p class="loader__label"><a href="https://ir8x.me">TAKING YOU SOMEWHERE NICE...</a></p>
+        <p class="loader__label"><a href="https://codedotjs.github.io/space/">TAKING YOU SOMEWHERE NICE...</a></p>
     </div>
 </body>
 
